tests/build/cases/widget/invalid_when_attributes.stderr
error: only `doc`, `cfg` and lint attributes are allowed in when
  --> cases/widget/invalid_when_attributes.rs:11:11
   |
11 |         #[foo(bar)]
   |           ^^^

error: only `doc`, `cfg` and lint attributes are allowed in when
  --> cases/widget/invalid_when_attributes.rs:12:16
   |
12 |         #[foo::bar(true)]
   |                ^^^

error: only `doc`, `cfg` and lint attributes are allowed in when
  --> cases/widget/invalid_when_attributes.rs:24:11
   |
24 |         #[inline] // invalid attribute
   |           ^^^^^^

warning: unused import: `std::vec`
  --> cases/widget/invalid_when_attributes.rs:26:17
   |
26 |             use std::vec; // expect unused import warning here
   |                 ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default
help: consider adding a `#[cfg(test)]` to the containing module
  --> cases/widget/invalid_when_attributes.rs:3:1
   |
3  | #[widget($crate::test_widget)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this warning originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
